cloudformation/streamlinedmicroservices.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: {}

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: igw-0f76fa8ca0c20a71e
      VpcId: vpc-0e76fa8c3eb3c5712

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: vpc-0e76fa8c3eb3c5712

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: vpc-0e76fa8c3eb3c5712

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: igw-0f76fa8ca0c20a71e
      RouteTableId: rtb-0c76fa8c47f9b9abc

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: rtb-0c76fa8c47f9b9abc
      SubnetId: subnet-0a76fa8c6f88d7ddf

  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: example-key-pair
      SecurityGroups:
        - sg-0b76fa8c0d0e861ef
      SubnetId: subnet-0a76fa8c6f88d7ddf
      ImageId: ami-0c55b159cbfafe1f0

  BastionHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion Host security group
      VpcId: vpc-0e76fa8c3eb3c5712
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: example-key-pair
      SecurityGroups:
        - sg-0c76fa8cc9e47a135
      SubnetId: subnet-0a76fa8c6f88d7ddf
      ImageId: ami-0c55b159cbfafe1f0
      UserData:
        Fn::Base64: |
            #!/bin/bash
            sudo apt-get update
            sudo apt-get install -y docker.io
            sudo docker pull nginx:1.17.0
            sudo docker run -d nginx:1.17.0
  
  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
    GroupDescription: EC2 instance security group
    VpcId: vpc-0e76fa8c3eb3c5712
    SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
